--- a/tracker-backend/config/config.env
+++ b/tracker-backend/config/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
 PORT=5000
-MONGO_URI=mongodb+srv://Antuan:q1w2e3r4@database.7ph5u.mongodb.net/DataBase?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Anton:XMi8g25lUeFpufr3@database.7ph5u.mongodb.net/coursework?retryWrites=true&w=majority
